@@ -1,69 +1,32 @@
-# $Id: html_formatter.rb,v 1.3 2005-09-08 09:51:25 fdiary Exp $
-# Copyright (C) 2002-2003 TAKEUCHI Hitoshi <hitoshi@namaraii.com>
+# $Id: html_formatter.rb,v 1.4 2005-09-29 04:53:01 fdiary Exp $
 
 require 'hiki/util'
 require "style/default/html_formatter"
 require "style/math/latex.rb"
 
 module Hiki
-  class HTMLFormatter_math
-    def initialize( s, db, plugin, conf, suffix = 'l')
-      super( s, db, plugin, conf, suffix )
-      @save_text = ''
-      @last_mode = nil
-      @math = nil
+  class HTMLFormatter_math < HTMLFormatter_default
+    def to_s
+      super
+      @html_converted = replace_math( @html_converted )
     end
 
     private
-    def map(key)
-      case key
-      when :displaymath_open
-        '<div class="displaymath">'
-      when :displaymath_close
-        '</div>'
-      else
-        super(key)
-      end
-    end
 
-    def token_to_s( t, s )
-      case t[:e]
-      when :math_text
-        if @last_mode and @last_mode != :math_text then
-          s[:html] << math().text_mode(@save_text)
-          @save_text = '' 
-        else
-          @save_text += t[:s]
+    def replace_math( text )
+      replace_inline( text ) do |str|
+        str.gsub!( /\[\$(.+?)\$\]/ ) do |match|
+          math.text_mode( $1.unescapeHTML )
         end
-        @last_mode = :math_text
-      when :math_display
-        if @last_mode and @last_mode != :math_display then
-          s[:html] << math().display_mode(@save_text)
-          @save_text = ''
-        else
-          @save_text += t[:s]
+        str.gsub!( /(^\$\$.*\n?)+/ ) do |match|
+          '<div class="displaymath">%s</div>' % 
+            math.display_mode( match.unescapeHTML.gsub( /^\$\$/, '' ) )
         end
-        @last_mode = :math_display
-      else
-        if @save_text.size > 0 then
-          case @last_mode
-          when :math_text
-            s[:html] << math().text_mode(@save_text)
-          when :math_display
-            s[:html] << math().display_mode(@save_text)
-          end
-          @save_text = ''
-        end
-        @last_mode = nil
-        super( t, s )
       end
     end
 
     def math
-      if @math.nil?
-        @math = Math_latex.new(@conf, @plugin.instance_eval{@page})
-      end
-      @math
+      @math ||= Math_latex.new(@conf, @plugin.instance_eval{@page})
     end
   end
 end
